overflow fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@
   text-align: center;
   margin: auto;
   height: 100vh;
+  overflow: hidden;
 }
 
 .what {
